fea-rs/test-data/compile-tests/mini-latin/bad/negative_lig_caret_idx.fea
table GDEF {
    # indices cannot be negative
    LigatureCaretByIndex f_f -100;
} GDEF;
